# kuli

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: ci.yml
apps/kuli/: CMakeLists.txt  main.cpp
cmake/: version.hpp.in
docs/: cli.md  concepts.md  design.md  glossary.md  requirements.md  roadmap.md  vision.md
docs/scenarios/: devkit.md
examples/bps/: source.toml
examples/bps/blueprints/: fd.luau  ripgrep.luau  tools.luau
libs/kuli-bp/: CMakeLists.txt
libs/kuli-bp/include/kuli/bp/: apply.hpp  capability.hpp  generation.hpp  hosts.hpp  meshell.hpp  resolver.hpp  scripture.hpp  source.hpp
libs/kuli-bp/src/: adapter.cpp  apply.cpp  capability.cpp  gen_cmd.cpp  generation.cpp  hosts.cpp  meshell.cpp  resolver.cpp  resolver.hpp  scripture.cpp  source.cpp
libs/kuli-crypto/: CMakeLists.txt
libs/kuli-crypto/include/kuli/crypto/: hash.hpp  sign.hpp
libs/kuli-crypto/src/: hash.cpp  sign.cpp
libs/kuli-diag/: CMakeLists.txt
libs/kuli-diag/include/kuli/diag/: diagnostic.hpp
libs/kuli-diag/src/: diagnostic.cpp
libs/kuli-engine/: CMakeLists.txt
libs/kuli-engine/include/kuli/engine/: engine.hpp
libs/kuli-engine/src/: engine.cpp
libs/kuli-http/: CMakeLists.txt
libs/kuli-http/include/kuli/http/: download.hpp
libs/kuli-http/src/: download.cpp
libs/kuli-ir/: CMakeLists.txt
libs/kuli-ir/include/kuli/ir/: ir.hpp
libs/kuli-ir/src/: validate.cpp
libs/kuli-luau/: CMakeLists.txt
libs/kuli-luau/include/kuli/luau/: derivation.hpp  frontend.hpp  hashing.hpp  pattern.hpp
libs/kuli-luau/src/: canonical_json.cpp  luau_frontend.cpp
libs/kuli-platform/: CMakeLists.txt
libs/kuli-platform/include/kuli/platform/: env.hpp  host.hpp  paths.hpp  process.hpp  shim.hpp  win_env.hpp
libs/kuli-platform/src/: env.cpp  host.cpp  paths.cpp  process.cpp  shim.cpp  win_env.cpp
libs/kuli-sense/: CMakeLists.txt
libs/kuli-sense/include/kuli/sense/: sense.hpp
libs/kuli-sense/src/: sense.cpp
libs/kuli-store/: CMakeLists.txt
libs/kuli-store/include/kuli/store/: archive.hpp  store.hpp
libs/kuli-store/src/: archive.cpp  store.cpp
tests/: CMakeLists.txt  test_archive.cpp  test_blueprint_eval.cpp  test_capability.cpp  test_crypto_hash.cpp  test_derivation_hash.cpp  test_engine_dryrun.cpp  test_engine_realize.cpp  test_exec.cpp  test_generation.cpp  test_ir_validate.cpp  test_luau_sandbox.cpp  test_meshell.cpp  test_net_smoke.cpp  test_resolver.cpp  test_rollback.cpp  test_scripture.cpp  test_sense.cpp  test_sign.cpp  test_source.cpp  test_store.cpp
